# search_index

./: Cargo.toml  git.template
src/: error.rs  lib.rs
src/analyzer/: mod.rs
src/codec/: debug.rs  mod.rs  simple.rs
src/core/: executor.rs  mod.rs
src/core/index/: meta.rs  mod.rs  untracked_index_meta.rs
src/core/segment/: error.rs  id.rs  meta.rs  mod.rs  updater.rs
src/directory/: error.rs  file.rs  mem.rs  mod.rs  segment.rs  shared_mmap_memory.rs  watch_event_router.rs
src/directory/lib/: lock.rs  mod.rs
src/directory/managed/: mod.rs
src/directory/memory_pointer/: memory.rs  mod.rs  resident.rs
src/directory/mmap/: cache.rs  inner.rs  inner_watcher_wrapper.rs  mod.rs  watcher_wrapper.rs
src/error/: mod.rs
src/postings/: intersection.rs  mod.rs  simple.rs  vec.rs
src/reader/: mod.rs
src/schema/: field.rs  field_value.rs  mod.rs  term.rs
src/schema/document/: mod.rs
src/schema/lib/: build.rs  facet.rs  inner.rs  mod.rs  value.rs
src/schema/lib/field/: entry.rs  mod.rs  type.rs  value.rs
src/schema/lib/field/options/: index_record.rs  (+3 more)
src/serial/: mod.rs
src/tokenizer/: manager.rs  mod.rs
src/tokenizer/chain/: mod.rs
src/tokenizer/filter/: lower_caser.rs  mod.rs  remove_long.rs  stemmer.rs
src/tokenizer/lib/: boxed.rs  mod.rs  simple.rs
src/tokenizer/raw/: mod.rs  token.rs
src/tokenizer/simple/: mod.rs
src/writer/: closed_index.rs  field.rs  mod.rs  postings.rs
src/writer/cursor/: ciw_doc.rs  ciw_field.rs  ciw_form.rs  ciw_term.rs  mod.rs
src/writer/lib/: mod.rs  stamper.rs
src/writer/lib/operation/: add.rs  mod.rs
