[package]
name = "search_index"
version = "0.1.0"
authors = ["qiongtubao <810776886@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "0.4.2"
itertools = "0.4.5"
memmap = "0.2.3"
lazy_static = "0.1.*"