[package]
name = "search_index"
version = "0.1.0"
authors = ["qiongtubao <810776886@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.0"
notify = "4.0.13"
once_cell = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
scoped-pool = "1.0"
uuid = { version = "0.7.2", features = ["v4", "serde"] }
census = "0.2"